# DandelionMusic

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  run.py
config/: config.py  en.json  yt-dlp.conf
musicbot/: __main__.py  audiocontroller.py  bot.py  linkutils.py  loader.py  settings.py  utils.py
musicbot/commands/: developer.py  general.py  music.py
musicbot/plugins/: button.py
musicbot/yt_dlp_plugins/extractor/: discord.py  suno.py
