[project]
name = "doybot-music"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aioconsole==0.8.2",
    "aiohttp~=3.13.5",
    "aiosqlite==0.21.0",
    "alembic~=1.18.3",
    "asyncio~=4.0.0",
    "beautifulsoup4==4.14.3",
    "bgutil-ytdlp-pot-provider==1.3.1",
    "davey~=0.1.5",
    "discord-py[voice]==2.7.1",
    "json-with-comments==1.2.10",
    "packaging~=25.0",
    "python-dotenv~=1.2.2",
    "setuptools==82.0.1",
    "spotipy==2.26.0",
    "sqlalchemy[asyncio]~=2.0.50",
    "tomli==2.4.1",
    "wheel==0.47.0",
    "yt-dlp[default]~=2026.3.17",
]
